--- a/style.css
+++ b/style.css
@@ -855,6 +855,7 @@ input[type=range].styled-slider:active::-ms-track {
 
   .header__list {
     flex-direction: column;
+    gap: 30px;
   }
 
   .header__btn {
@@ -866,7 +867,7 @@ input[type=range].styled-slider:active::-ms-track {
     flex-direction: column;
     justify-content: start;
     overflow-y: scroll;
-    padding: 60px 40px;
+    padding: 30px;
     top: 107px;
     right: 0;
     z-index: 10;
